demo/deployment-functions.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci1
  namespace: slimfaas-demo
spec:
  selector:
    matchLabels:
      app: fibonacci1
  template:
    metadata:
      labels:
        app: fibonacci1
      annotations:
        SlimFaas/Function: "true"
        SlimFaas/ReplicasMin: "0"
        SlimFaas/ReplicasAtStart: "1"
        SlimFaas/ReplicasStartAsSoonAsOneFunctionRetrieveARequest: "false"
        SlimFaas/TimeoutSecondBeforeSetReplicasMin: "10"
        SlimFaas/NumberParallelRequest: "10"
        SlimFaas/DependsOn: "fibonacci2"
        #SlimFaas/Schedule: |
        #          {"TimeZone":"fr-FR","Default":{"WakeUp":["07:00"],"ScaleDownTimeout":[{"Time": "21:00","Value":20},{"Time":"07:00","Value": 10}]}}
    spec:
      serviceAccountName: default
      containers:
        - name: fibonacci1
          image: axaguildev/fibonacci:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 8
            timeoutSeconds: 8
          resources:
            limits:
              memory: "96Mi"
              cpu: "50m"
            requests:
              memory: "96Mi"
              cpu: "10m"
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci2
  namespace: slimfaas-demo
spec:
  selector:
    matchLabels:
      app: fibonacci2
  template:
    metadata:
      labels:
        app: fibonacci2
      annotations:
        SlimFaas/Function: "true"
        SlimFaas/ReplicasMin: "0"
        SlimFaas/ReplicasAtStart: "1"
        SlimFaas/TimeoutSecondBeforeSetReplicasMin: "10"
        SlimFaas/NumberParallelRequest : "10"
    spec:
      serviceAccountName: default
      containers:
        - name: fibonacci2
          image: axaguildev/fibonacci:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 8
            timeoutSeconds: 8
          resources:
            limits:
              memory: "96Mi"
              cpu: "50m"
            requests:
              memory: "96Mi"
              cpu: "10m"
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci3
  namespace: slimfaas-demo
spec:
  selector:
    matchLabels:
      app: fibonacci3
  template:
    metadata:
      labels:
        app: fibonacci3
      annotations:
        SlimFaas/Function: "true"
        SlimFaas/ReplicasMin: "0"
        SlimFaas/ReplicasAtStart: "1"
        SlimFaas/ReplicasStartAsSoonAsOneFunctionRetrieveARequest: "false"
        SlimFaas/TimeoutSecondBeforeSetReplicasMin: "10"
        SlimFaas/NumberParallelRequest : "10"
        SlimFaas/DependsOn: "mysql"
    spec:
      serviceAccountName: default
      containers:
        - name: fibonacci3
          image: axaguildev/fibonacci:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 8
            timeoutSeconds: 8
          resources:
            limits:
              memory: "96Mi"
              cpu: "50m"
            requests:
              memory: "96Mi"
              cpu: "10m"
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci4
  namespace: slimfaas-demo
spec:
  selector:
    matchLabels:
      app: fibonacci4
  template:
    metadata:
      labels:
        app: fibonacci4
      annotations:
        SlimFaas/Function: "true"
        SlimFaas/ReplicasMin: "2"
        SlimFaas/ReplicasAtStart: "2"
        SlimFaas/ReplicasStartAsSoonAsOneFunctionRetrieveARequest: "false"
        SlimFaas/TimeoutSecondBeforeSetReplicasMin: "10"
        SlimFaas/NumberParallelRequest : "10"
    spec:
      serviceAccountName: default
      containers:
        - name: fibonacci4
          image: axaguildev/fibonacci:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 8
            timeoutSeconds: 8
          resources:
            limits:
              memory: "96Mi"
              cpu: "50m"
            requests:
              memory: "96Mi"
              cpu: "10m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci1
  namespace: slimfaas-demo
spec:
  selector:
    app: fibonacci1
  ports:
    - port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci2
  namespace: slimfaas-demo
spec:
  selector:
    app: fibonacci2
  ports:
    - port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci3
  namespace: slimfaas-demo
spec:
  selector:
    app: fibonacci3
  ports:
    - port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci4
  namespace: slimfaas-demo
spec:
  selector:
    app: fibonacci4
  ports:
    - port: 5000
