demo/deployment-slimfaas.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slimfaas
spec:
  replicas: 3
  podManagementPolicy: Parallel
  serviceName: slimfaas
  selector:
    matchLabels:
      app: slimfaas
  template:
    metadata:
      labels:
        app: slimfaas
    spec:
      volumes:
        - name: slimfaas-volume
          emptyDir:
            sizeLimit: 10Mi
      serviceAccountName: slimfaas
      containers:
        - name: slimfaas
          image: axaguildev/slimfaas:pr-24-243
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 8
          volumeMounts:
            - name: slimfaas-volume
              mountPath: /database
          resources:
            limits:
              memory: "160Mi"
              cpu: "1000m"
            requests:
              memory: "76Mi"
              cpu: "200m"
          ports:
            - containerPort: 5000
              name: slimfaas
            - containerPort: 3262
              name: slimdata

---
apiVersion: v1
kind: Service
metadata:
  name: slimfaas
spec:
  type: NodePort
  selector:
    app: slimfaas
  ports:
    - name: "http"
      port: 5000
      targetPort: 5000
      nodePort: 30021
    - name: "slimdata"
      port: 3262
      targetPort: 3262
  externalTrafficPolicy: Local  # Preserve source IP
