demo/slimfaas-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: slimfaas-nodeport
  namespace: slimfaas-demo
spec:
  type: NodePort
  selector:
    app: slimfaas
  ports:
    - name: "http"
      port: 5000
      nodePort: 30021
  externalTrafficPolicy: Local  # Preserve source IP
