demo/slimfaas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slimfaas
  namespace: slimfaas-demo
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slimfaas
            port:
              number: 5000
